--- a/STM32/STM32-ROS-Robot-Controller-HAL/MDK-ARM/STM32-ROS-Robot-Controller-HAL.uvprojx
+++ b/STM32/STM32-ROS-Robot-Controller-HAL/MDK-ARM/STM32-ROS-Robot-Controller-HAL.uvprojx
@@ -339,7 +339,7 @@
               <MiscControls></MiscControls>
               <Define>USE_HAL_DRIVER,STM32F103xE</Define>
               <Undefine></Undefine>
-              <IncludePath>../Core/Inc;                 ../Drivers/STM32F1xx_HAL_Driver/Inc;                 ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;                 ../Drivers/CMSIS/Device/ST/STM32F1xx/Include;                 ../Drivers/CMSIS/Include;                 ../Middlewares/Third_Party/FreeRTOS/Source/include;                 ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                 ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;                 ..\Application;                 ..\BSP;                 ..\BSP\mpu6050\eMPL;                 ..\BSP\mpu6050;                 ..\BSP\easylogger\inc</IncludePath>
+              <IncludePath>../Core/Inc;                   ../Drivers/STM32F1xx_HAL_Driver/Inc;                   ../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy;                   ../Drivers/CMSIS/Device/ST/STM32F1xx/Include;                   ../Drivers/CMSIS/Include;                   ../Middlewares/Third_Party/FreeRTOS/Source/include;                   ../Middlewares/Third_Party/FreeRTOS/Source/CMSIS_RTOS;                   ../Middlewares/Third_Party/FreeRTOS/Source/portable/RVDS/ARM_CM3;                   ..\Application;                   ..\BSP;                   ..\BSP\mpu6050\eMPL;                   ..\BSP\mpu6050;                   ..\BSP\easylogger\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
@@ -1666,6 +1666,11 @@
               <FileType>1</FileType>
               <FilePath>..\Application\pi_task.c</FilePath>
             </File>
+            <File>
+              <FileName>move_task.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Application\move_task.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1740,6 +1745,11 @@
               <FileName>bsp_pid.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\BSP\bsp_pid.c</FilePath>
+            </File>
+            <File>
+              <FileName>bsp_kinematics.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\BSP\bsp_kinematics.c</FilePath>
             </File>
           </Files>
         </Group>
